reorg and use directives instead of ngInclude

--- a/src/partials/accruals-panel.html
+++ b/src/partials/accruals-panel.html
@@ -7,21 +7,21 @@
       <div class="form-group">
         <label>Holiday / Floating Holiday</label>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="" ng-model="member.accruals.holiday">
+          <input type="number" class="form-control" placeholder="" ng-model="member.accruals.holiday">
           <div class="input-group-addon">hours</div>
         </div>
       </div>
       <div class="form-group">
         <label>Personal Leave</label>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="" ng-model="member.accruals.personal">
+          <input type="number" class="form-control" placeholder="" ng-model="member.accruals.personal">
           <div class="input-group-addon">hours</div>
         </div>
       </div>
       <div class="form-group">
         <label>Personal Leave Bank</label>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="" ng-model="member.accruals.personalBank">
+          <input type="number" class="form-control" placeholder="" ng-model="member.accruals.personalBank">
           <div class="input-group-addon">hours</div>
         </div>
       </div>
@@ -31,24 +31,24 @@
           <div class="col-xs-6">
             <label>Used this fiscal year</label>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="" ng-model="member.used.sick">
+              <input type="number" class="form-control" placeholder="" ng-model="member.used.sick">
               <div class="input-group-addon">hours</div>
             </div>
           </div>
           <div class="col-xs-6">
             <label>In bank</label>
             <div class="input-group">
-              <input type="text" class="form-control" placeholder="" ng-model="member.accruals.sick">
+              <input type="number" class="form-control" placeholder="" ng-model="member.accruals.sick">
               <div class="input-group-addon">hours</div>
             </div>
           </div>
         </div>
-        
+
       </div>
       <div class="form-group">
         <label>Vacation</label>
         <div class="input-group">
-          <input type="text" class="form-control" placeholder="" ng-model="member.accruals.vacation">
+          <input type="number" class="form-control" placeholder="" ng-model="member.accruals.vacation">
           <div class="input-group-addon">hours</div>
         </div>
       </div>
