--- a/src/partials/job-panel.html
+++ b/src/partials/job-panel.html
@@ -8,13 +8,13 @@
         <label>Hourly pay rate</label>
         <div class="input-group">
           <div class="input-group-addon">$</div>
-          <input type="text" class="form-control" placeholder="e.g. 14.77" ng-model="member.payRate">
+          <input type="number" class="form-control" placeholder="e.g. 14.77" ng-model="member.payRate">
           <div class="input-group-addon">per hour</div>
         </div>
       </div>
       <div class="form-group">
         <label>Years of Service</label>
-        <input type="text" class="form-control" ng-model="member.serviceYears">
+        <input type="number" class="form-control" ng-model="member.serviceYears">
       </div>
     </div>
   </div>
